--- a/src/templates/signin.ejs
+++ b/src/templates/signin.ejs
@@ -162,7 +162,7 @@
                                                                     <tr>
                                                                         <td style="font-family: sans-serif; font-size: 25px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #ec0867;"
                                                                             valign="top" align="center"
-                                                                            bgcolor="#ec0867"> <a href="/signup"
+                                                                            bgcolor="#ec0867"> <a href="<%= locals.signin_url %>"
                                                                                 target="_blank"
                                                                                 style="border: solid 1px #ec0867; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #ec0867; border-color: #ec0867; color: #ffffff;">
                                                                                 로그인 →</a> </td>
