--- a/src/templates/signup.ejs
+++ b/src/templates/signup.ejs
@@ -141,7 +141,7 @@
                                             valign="top">
                                             <p
                                                 style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                                👋&nbsp; 반갑습니다 <strong>정한호 박사과정</strong> 님</p>
+                                                👋&nbsp; 반갑습니다 <strong><%= locals.name %></strong> 님</p>
                                             <p
                                                 style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
                                                 ✨&nbsp; ISLab Tracer - 연구실 기자재 관리 시스템에 가입해주셔서 감사합니다.</p>
@@ -186,7 +186,7 @@
                                                                     <tr>
                                                                         <td style="font-family: sans-serif; font-size: 25px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #ec0867;"
                                                                             valign="top" align="center"
-                                                                            bgcolor="#ec0867"> <a href="/signup"
+                                                                            bgcolor="#ec0867"> <a href="<%= locals.signup_url %>"
                                                                                 target="_blank"
                                                                                 style="border: solid 1px #ec0867; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #ec0867; border-color: #ec0867; color: #ffffff;">
                                                                                 회원가입 완료하기</a> </td>
