--- a/src/templates/signin.ejs
+++ b/src/templates/signin.ejs
@@ -141,7 +141,7 @@
                                             valign="top">
                                             <p
                                                 style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                                👋&nbsp; 반갑습니다 <strong>정한호 박사과정</strong> 님</p>
+                                                👋&nbsp; 반갑습니다 <strong><%= locals.user%></strong> 님</p>
                                             <p
                                                 style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
                                                 ✨&nbsp; 오늘도 꼼꼼한 관리 부탁드립니다!</p>
@@ -179,7 +179,7 @@
                                             버튼 클릭이 안된다면, 아래 링크를 복사해서 새 탭에 붙여 넣으세요.</p>
                                             <p
                                             style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                            <a href="http://naver.com">http://naver.com</a>
+                                            <a href="<%= locals.signin_url %>"><%= locals.signin_url %></a>
                                             <br>
                                             <br>
                                             <br>
