--- a/src/templates/equipreg.ejs
+++ b/src/templates/equipreg.ejs
@@ -122,7 +122,7 @@
                     <!-- START CENTERED WHITE CONTAINER -->
                     <span class="preheader"
                         style="color: transparent; display: none; height: 0; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; mso-hide: all; visibility: hidden; width: 0;">
-                        This is preheader text. Some clients will show this text as a preview.</span>
+                        ISLab 기재자 관리 및 장비 구매 솔루션 ISLab Tracer</span>
                     <table role="presentation" class="main"
                         style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; min-width: 100%; background: #ffffff; border-radius: 3px; width: 100%;"
                         width="100%">
